syntax = "proto3";
package chat_room;
option go_package = "../pb";

service ChatRoomService {
    rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
    rpc JoinRoom(JoinRoomRequest) returns (JoinRoomResponse);
}

message CreateRoomRequest {
    string room_name = 1;
}

message CreateRoomResponse {
    bool success = 1;
    string message = 2;
}

message JoinRoomRequest {
    string room_name = 1;
}

message JoinRoomResponse {
    bool success = 1;
    string message = 2;
}